testsuite/tests/checks/nonoverlay_address_specifications/test.out
overlay.adb:11:24: error: nonoverlay address specification
11 |    Var2 : Integer with Address => Var_Rec.C'Address;  --  FLAG
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

